Changelog for UCDPloneSkin

UCDPloneSkin 2.0rc5 - Pending - May 1 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - fixed bgImageNoRepeat submit bug
    - derived navigation class so "in this section" behaves with only one item
      that is marked as excludeFromNav
  [ Scott Beardsley, scott@cse.ucdavis.edu ]
    - fixed 1px live search bug
    - converted heading from a table to divs
    - fixed hideDeptName install typo in ucdploneskin_properties
    - moved content area closer to the nav (too much whitespace)

UCDPloneSkin 2.0rc4 - Released - Apr 23 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - fixed header bg image regression
    - added configlet option to hide department name in the header
    - hard coded an alt tag for the optional logo in the header
    - centered optional header logo with a table hack
    - tweaked portlet css

UCDPloneSkin 2.0rc3 - Released - Apr 20 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - reworded favicon help
    - fixed left nav bug... current item now honors excludeFromNav property
      - added proper check for content types that don't have this property
    - current left nav item now shows work flow color, i.e. red for private
    - added css for PloneHelpCenter

UCDPloneSkin 2.0rc2 - Released - Apr 17 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - fixed a bug in the installer that prevented the new portlets from
      being set in left_slots

UCDPloneSkin 2.0rc1 - Released - Apr 16 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - quicklink url can now have ${portal_url} variable, search example does
    - adjusted spacing around department name header to allow no padding on 
      logo image
    - removed <a> underline from events (.listing a)
    - added configlet option for favicon

UCDPloneSkin 2.0 in progress - Released - Apr 14 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]