@@ -82,7 +82,7 @@ a.link-parent {
 #portal-logo {
   background: url(&dtml-portal_url;/&dtml-logoName;) no-repeat;
   border: 0;
-  padding: 0;
+  padding: 0 0 10px 0;
   margin: 0.3em 0.0em 0.2em 0.5em;
 }
 
